# Friday

./: .env  Friday.py  README.md  digit.py
Friday Backend/: .gitignore  LICENSE  README.md  pyproject.toml  requirements-vision.txt  requirements.txt
Friday Backend/app/: main.py
Friday Backend/app/controllers/: api.py  ws.py
Friday Backend/app/data/: reminders.json
Friday Backend/app/models/: __init__.py  state.py
Friday Backend/app/services/: __init__.py  actions.py  ai_router.py  calendar_service.py  gemini_service.py  local_ai_service.py  reminders.py  stats.py
Friday Backend/app/services/data/: sign_launcher_map.json
Friday Backend/app/services/vision/: __init__.py  air_mouse.py  camera_guard.py  sign_launcher.py
Friday Frontend/: BACKEND_SETUP.md  CONTAINER_NETWORKING.md  HEALTH_FIX.md  MOCK_API_GUIDE.md  QUICK_FIX.md  README.md  VOICE_COMMANDS.md  package-lock.json  package.json
Friday Frontend/app/: page.tsx
Friday Frontend/app/controllers/: useHomeController.tsx
Friday Frontend/app/models/: status.ts
Friday Frontend/app/views/: HomeView.tsx
Friday Frontend/config/: network.ts
app/: __init__.py  main.py
app/controllers/: __init__.py  api.py  ws.py
app/models/: state.py
app/services/: actions.py  gemini_service.py  tts.py
